--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         </div>
         <div class="player">
             <!-- audio player -->
-            <audio id="audioPlayer" src="musics/aja ve mahiya.mp3"></audio>
+            <audio id="audioPlayer" src="aja ve mahiya.mp3"></audio>
             <!-- ****************************************************Controls********************** -->
 
 
@@ -652,25 +652,25 @@
 
         // Array of songs and song buttons
         const songs = [
-            { name: 'Aja Ve Mahiya', path: 'musics/aja ve mahiya.mp3' },
-            { name: 'Bewafa', path: 'musics/bewafa.mp3' },
-            { name: 'Ayi Nhi', path: 'musics/ayi nhi.mp3' },
-            { name: 'Perfect', path: 'musics/perfect.mp3' },
-            { name: 'Jawani', path: 'musics/jawani.mp3' },
-            { name: 'Tu jana na piya', path: 'musics/Tu jana na Piya.mp3' },
-            { name: 'Tu hai Kaha', path: 'musics/Tu hai kaha.mp3' },
-            { name: 'NAJA', path: 'musics/NAJA.mp3' },
-            { name: 'NA NA NA NA', path: 'musics/na-na-na-na.mp3' },
-            { name: 'Pungi', path: 'musics/pungi.mp3' },
-            { name: 'Ghungroo toot gye', path: 'musics/ghungroo toot gye.mp3' },
-            { name: 'Gumshuda', path: 'musics/gumshuda.mp3' },
-            { name: 'Dope Shope', path: 'musics/dope shope.mp3' },
-            { name: 'One Love', path: 'musics/one love.mp3' },
-            { name: 'No Love', path: 'musics/no-love.mp3' },
-            { name: 'Aam Jahe Munde', path: 'musics/aam jahe munde.mp3' },
-            { name: 'Millionare', path: 'musics/millionare.mp3' },
-            { name: 'Maan Meri Jaan', path: 'musics/maan meri jaan.mp3' },
-            { name: 'Tu Aake Dekhle', path: 'musics/Tu ake dekhle.mp3' }
+            { name: 'Aja Ve Mahiya', path: 'aja ve mahiya.mp3' },
+            { name: 'Bewafa', path: 'bewafa.mp3' },
+            { name: 'Ayi Nhi', path: 'ayi nhi.mp3' },
+            { name: 'Perfect', path: 'perfect.mp3' },
+            { name: 'Jawani', path: 'jawani.mp3' },
+            { name: 'Tu jana na piya', path: 'Tu jana na Piya.mp3' },
+            { name: 'Tu hai Kaha', path: 'Tu hai kaha.mp3' },
+            { name: 'NAJA', path: 'NAJA.mp3' },
+            { name: 'NA NA NA NA', path: 'na-na-na-na.mp3' },
+            { name: 'Pungi', path: 'pungi.mp3' },
+            { name: 'Ghungroo toot gye', path: 'ghungroo toot gye.mp3' },
+            { name: 'Gumshuda', path: 'gumshuda.mp3' },
+            { name: 'Dope Shope', path: 'dope shope.mp3' },
+            { name: 'One Love', path: 'one love.mp3' },
+            { name: 'No Love', path: 'no-love.mp3' },
+            { name: 'Aam Jahe Munde', path: 'aam jahe munde.mp3' },
+            { name: 'Millionare', path: 'millionare.mp3' },
+            { name: 'Maan Meri Jaan', path: 'maan meri jaan.mp3' },
+            { name: 'Tu Aake Dekhle', path: 'Tu ake dekhle.mp3' }
         ];
         let currentSongIndex = 0;
 
